# TouriQuest2

./: .env.dev  .gitattributes  .gitignore  .pre-commit-config.yaml  BACKEND_IMPLEMENTATION_PLAN.md  CI-CD-README.md  DATABASE_SCHEMA_SUMMARY.md  DEVELOPMENT_NAVIGATION.md  DOCKERFILE_TEMPLATE.dev  Makefile  advanced-poetry-fix.sh  cache-manager.sh  clean-dev.bat  clean-dev.sh  cleanup-user-service-refs.sh  comprehensive-diagnosis.sh  create-missing-pyproject.ps1  demo-new-scripts.sh  diagnose-poetry-groups.sh  docker-compose.dev.yml  docker-compose.prod.yml  fix-compose-version.sh  fix-docker-wsl.sh  fix-dockerfile-poetry.bat  fix-dockerfile-poetry.ps1  fix-media-dependencies.ps1  fix-media-dependencies.sh  fix-missing-dependencies.ps1  fix-missing-dependencies.sh  fix-poetry-groups.sh  fix-poetry-package-mode.sh  fix-toml-duplicates.bat  fix-toml-duplicates.sh  fix-toml-python.py  generate-dockerfiles.bat  lkjsd  logs-dev.sh  make-executable.sh  make-scripts-executable.sh  master-poetry-fix.sh  (+25 more)
touriquest-backend/: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
touriquest-backend/services/admin-service/: Dockerfile.dev  main.py  pyproject.toml
touriquest-backend/services/admin-service/app/: main.py
touriquest-backend/services/admin-service/app/api/: __init__.py
touriquest-backend/services/admin-service/app/core/: __init__.py  config.py  database.py  security.py
touriquest-backend/services/admin-service/app/models/: __init__.py  admin_user.py  audit_log.py  content_moderation.py  financial_record.py  system_metric.py  user_moderation.py
touriquest-backend/services/admin-service/app/schemas/: content_moderation.py  dashboard.py  financial.py  user_management.py
touriquest-backend/services/admin-service/app/services/: audit_service.py  content_moderation_service.py  dashboard_service.py  user_management_service.py  websocket_manager.py
touriquest-backend/services/admin-service/app/utils/: monitoring.py
touriquest-backend/services/ai-service/: .env.example  Dockerfile  Dockerfile.dev  Makefile  docker-compose.dev.yml  docker-compose.prod.yml  main.py  pyproject.toml  redis.conf
touriquest-backend/services/ai-service/app/: __init__.py  main.py
touriquest-backend/services/ai-service/app/api/: __init__.py  chat.py  voice.py  websocket.py
touriquest-backend/services/ai-service/app/core/: __init__.py  config.py  database.py
touriquest-backend/services/ai-service/app/models/: __init__.py  database.py  schemas.py
touriquest-backend/services/ai-service/app/services/: __init__.py  conversation_service.py  embedding_service.py  function_service.py  gemini_service.py  voice_service.py  websocket_service.py
touriquest-backend/services/ai-service/app/utils/: __init__.py  auth.py
touriquest-backend/services/ai-service/init/: 01-init-ai-databases.sh
touriquest-backend/services/analytics-service/: Dockerfile.dev  main.py  main_backup.py  pyproject.toml  validate_analytics.py
touriquest-backend/services/analytics-service/app/core/: config.py  database.py
touriquest-backend/services/analytics-service/app/models/: __init__.py  analytics_models.py  warehouse_models.py
touriquest-backend/services/analytics-service/app/services/: __init__.py  analytics_service.py  etl_service.py  reporting_service.py
touriquest-backend/services/analytics-service/scripts/: benchmark_analytics_queries.py  load_test_analytics_data.py  validate_analytics_schema.py
touriquest-backend/services/analytics-service/tests/: test_engagement.py  test_performance.py
touriquest-backend/services/analytics-service/tests/api/: test_booking_analytics.py  test_conversion_analytics.py  (+8 more)
touriquest-backend/services/api-gateway/: .env.example  Dockerfile  Dockerfile.dev  README.md  circuit_breaker.py  config.py  main.py  pyproject.toml  service_registry.py
touriquest-backend/services/auth-service/: .env.example  .env.template  Dockerfile  Dockerfile.dev  README.md  config.py  main.py  pyproject.toml  requirements.txt
touriquest-backend/services/auth-service/app/: __init__.py  database.py  main.py
touriquest-backend/services/booking-service/: Dockerfile.dev  main.py  pyproject.toml
touriquest-backend/services/communication-service/: Dockerfile  Dockerfile.dev  pyproject.toml
touriquest-backend/services/communication-service/app/: __init__.py  main.py
touriquest-backend/services/experience-service/: Dockerfile.dev  pyproject.toml  test_structure.py
touriquest-backend/services/experience-service/app/: main.py
touriquest-backend/services/integrations-service/: Dockerfile.dev  pyproject.toml
touriquest-backend/services/integrations-service/app/: __init__.py  main.py
touriquest-backend/services/media-service/: Dockerfile.dev  README.md  main.py  pyproject.toml
touriquest-backend/services/media-service/app/: main.py
touriquest-backend/services/monitoring-service/: .env.example  Dockerfile  Dockerfile.dev  pyproject.toml
touriquest-backend/services/monitoring-service/app/: __init__.py  main.py
touriquest-backend/services/notification-service/: Dockerfile.dev  main.py  pyproject.toml
touriquest-backend/services/poi-service/: Dockerfile.dev  main.py  pyproject.toml  setup_dev.bat  setup_dev.sh
touriquest-backend/services/poi-service/app/: __init__.py  main.py
touriquest-backend/services/property-service/: Dockerfile  Dockerfile.dev  main.py  pyproject.toml
touriquest-backend/services/property-service/app/: main.py
touriquest-backend/services/recommendation-service/: Dockerfile.dev  pyproject.toml  requirements.txt
touriquest-backend/services/recommendation-service/app/: config.py  main.py
touriquest-backend/services/user-service/: main.py
touriquest-backend/shared/: __init__.py
touriquest-backend/shared/database/: __init__.py  redis.py
touriquest-backend/shared/database/models/: __init__.py  base.py  booking.py  experience.py  poi.py  property.py  review.py  user.py
touriquest-backend/shared/messaging/: __init__.py
touriquest-backend/shared/monitoring/: __init__.py
touriquest-backend/shared/security/: __init__.py
(+479 files in other folders)
