[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "touriquest-integrations-service"
version = "1.0.0"
description = "TouriQuest third-party integrations service for payments, maps, communications, and external APIs"
authors = [ "TouriQuest Team <dev@touriquest.com>",]
readme = "README.md"
package-mode = false

[tool.black]
line-length = 100
target-version = [ "py311",]
include = "\\.pyi?$"
extend-exclude = "/(\n  # directories\n  \\.eggs\n  | \\.git\n  | \\.hg\n  | \\.mypy_cache\n  | \\.tox\n  | \\.venv\n  | build\n  | dist\n)/\n"

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
pydantic-settings = "^2.1.0"
asyncpg = "^0.29.0"
alembic = "^1.13.0"
stripe = "^7.8.0"
paypalrestsdk = "^1.13.3"
braintree = "^4.21.0"
googlemaps = "^4.10.0"
mapbox = "^0.11.0"
geopy = "^2.4.1"
shapely = "^2.0.2"
sendgrid = "^6.11.0"
twilio = "^8.11.1"
boto3 = "^1.34.0"
slack-sdk = "^3.26.0"
pycountry = "^23.12.11"
openai = "^1.6.1"
anthropic = "^0.8.1"
requests = "^2.31.0"
httpx = "^0.28.0"
aiohttp = "^3.9.1"
python-multipart = "^0.0.6"
googletrans = "^4.0.0"
langdetect = "^1.0.9"
babel = "^2.14.0"
forex-python = "^1.8"
pytz = "^2023.3"
python-dateutil = "^2.8.2"
pyowm = "^3.3.0"
# weatherapi = "^1.3.0"  # Package doesn't exist, using pyowm instead
icalendar = "^5.0.11"
caldav = "^1.3.9"
google-api-python-client = "^2.111.0"
google-auth = "^2.25.2"
google-auth-oauthlib = "^1.2.0"
tweepy = "^4.14.0"
facebook-sdk = "^3.1.0"
# instagram-basic-display = "^1.2.1"  # Package doesn't exist in PyPI
amadeus = "^8.1.0"
# skyscanner-python = "^1.1.5"  # Package doesn't exist in PyPI
marshmallow = "^3.20.2"
cerberus = "^1.3.5"
phonenumbers = "^8.13.27"
email-validator = "^2.1.0"
# celery-beat = "^2.5.0"  # Package doesn't exist, beat is part of celery
kombu = "^5.3.4"
prometheus-client = "^0.19.0"
structlog = "^23.2.0"
cryptography = "^41.0.7"
urllib3 = "^2.1.0"
certifi = "^2023.11.17"
chardet = "^5.2.0"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [ "tests",]
pythonpath = [ "app",]
asyncio_mode = "auto"

[tool.coverage.run]
source = [ "app",]
omit = [ "*/tests/*", "*/migrations/*", "*/__init__.py",]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.poetry.dependencies.uvicorn]
extras = [ "standard",]
version = "^0.24.0"

[tool.poetry.dependencies.pydantic]
extras = [ "email",]
version = "^2.5.0"

[tool.poetry.dependencies.sqlalchemy]
extras = [ "asyncio",]
version = "^2.0.23"

[tool.poetry.dependencies.redis]
extras = [ "hiredis",]
version = "^5.0.1"

[tool.poetry.dependencies.celery]
extras = [ "redis",]
version = "^5.3.4"

[tool.poetry.dependencies.sentry-sdk]
extras = [ "fastapi",]
version = "^1.39.2"

[tool.poetry.dependencies.pyjwt]
extras = [ "crypto",]
version = "^2.8.0"

[tool.poetry.dependencies.passlib]
extras = [ "bcrypt",]
version = "^1.7.4"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
bandit = "^1.7.5"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-xdist = "^3.5.0"
factory-boy = "^3.3.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.14"
