[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "monitoring-service"
version = "1.0.0"
description = "Comprehensive monitoring and observability service for TouriQuest platform"
authors = [ "TouriQuest Team <team@touriquest.com>",]
readme = "README.md"
package-mode = false

[tool.black]
line-length = 100
target-version = [ "py311",]
include = "\\.pyi?$"
exclude = "/(\n    \\.eggs\n  | \\.git\n  | \\.hg\n  | \\.mypy_cache\n  | \\.tox\n  | \\.venv\n  | _build\n  | buck-out\n  | build\n  | dist\n)/\n"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = [ "app",]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
[[tool.mypy.overrides]]
module = [ "prometheus_client.*", "opentelemetry.*", "sentry_sdk.*", "elasticsearch.*", "pdpyras.*", "slack_sdk.*",]
ignore_missing_imports = true

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
pydantic = "^2.4.0"
pydantic-settings = "^2.0.0"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
asyncpg = "^0.29.0"
redis = "^5.0.1"
aioredis = "^2.0.1"
prometheus-client = "^0.19.0"
prometheus-fastapi-instrumentator = "^6.1.0"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-instrumentation-fastapi = "^0.42b0"
opentelemetry-instrumentation-sqlalchemy = "^0.42b0"
opentelemetry-instrumentation-redis = "^0.42b0"
opentelemetry-instrumentation-requests = "^0.42b0"
opentelemetry-exporter-jaeger-thrift = "^1.21.0"
structlog = "^23.2.0"
loguru = "^0.7.2"
elasticsearch = "^8.11.0"
elasticsearch-dsl = "^8.11.0"
requests = "^2.31.0"
httpx = "^0.25.2"
slack-sdk = "^3.23.0"
pdpyras = "^5.2.0"
pandas = "^2.1.3"
numpy = "^1.25.2"
aiofiles = "^23.2.1"
python-multipart = "^0.0.6"
aiohttp = "^3.9.1"
psutil = "^5.9.6"
APScheduler = "^3.10.4"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"

[tool.poetry.dependencies.uvicorn]
extras = [ "standard",]
version = "^0.24.0"

[tool.poetry.dependencies.sentry-sdk]
extras = [ "fastapi", "sqlalchemy",]
version = "^1.38.0"

[tool.poetry.dependencies.python-jose]
extras = [ "cryptography",]
version = "^3.3.0"

[tool.poetry.dependencies.passlib]
extras = [ "bcrypt",]
version = "^1.7.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pre-commit = "^3.5.0"
