[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "poi-service"
version = "1.0.0"
description = "TouriQuest POI Discovery Service"
authors = [ "TouriQuest Team <team@touriquest.com>",]
package-mode = false

[tool.black]
line-length = 88
target-version = [ "py311",]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
pydantic = "^2.5.0"
sqlalchemy = "^2.0.23"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
redis = "^5.0.1"
geoalchemy2 = "^0.14.2"
shapely = "^2.0.2"
elasticsearch = "^8.11.0"
celery = "^5.3.4"
python-multipart = "^0.0.6"
pillow = "^10.1.0"
httpx = "^0.25.2"
prometheus-client = "^0.19.0"
structlog = "^23.2.0"
python-dotenv = "^1.0.0"
boto3 = "^1.34.0"
googlemaps = "^4.10.0"
openai = "^1.3.0"
numpy = "^1.25.0"
scikit-learn = "^1.3.0"
librosa = "^0.10.1"
soundfile = "^0.12.1"
pydub = "^0.25.1"
mutagen = "^1.47.0"
ffmpeg-python = "^0.2.0"
trimesh = "^4.0.5"
scipy = "^1.11.4"
# open3d = "^0.17.0"  # Commented out due to compatibility issues
python-magic = "^0.4.27"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
python-slugify = "^8.0.1"
aiofiles = "^23.2.0"
streaming-form-data = "^1.13.0"
flower = "^2.0.1"
kombu = "^5.3.4"
psutil = "^5.9.6"
python-dateutil = "^2.8.2"
pytz = "^2023.3"
click = "^8.1.7"

[tool.pytest.ini_options]
testpaths = [ "tests",]
asyncio_mode = "auto"

[tool.poetry.dependencies.uvicorn]
extras = [ "standard",]
version = "^0.24.0"

[tool.poetry.dependencies.python-jose]
extras = [ "cryptography",]
version = "^3.3.0"

[tool.poetry.dependencies.passlib]
extras = [ "bcrypt",]
version = "^1.7.4"

[tool.poetry.dependencies.sentry-sdk]
extras = [ "fastapi",]
version = "^1.38.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pre-commit = "^3.6.0"
